--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,25 @@
 
     <!-- The Website -->
     <div class="container">
-
         <div id="home_page_div">
+
+            <!-- Home Page - world -->
+            <div class="home-container">
+                <div class="home-row">
+                    <h2>Search by Country</h2>
+                </div>
+                <div class="home-row">
+                    <div class="col-world-4">
+
+                    </div>
+                    <div class="col-world-8">
+                        <div class="world-container">
+                            <div class="jsmaps-wrapper" id="world-map"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- Home Page - language -->
             <div class="home-container">
                 <div class="home-row">
@@ -202,8 +219,25 @@
     <!-- JQuery -->
     <script src='https://code.jquery.com/jquery-3.3.1.min.js' integrity='sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8='
         crossorigin='anonymous'></script>
+    <!-- Map scripts - add the below to your page -->
+    <link href="jsmaps/jsmaps.css" rel="stylesheet" type="text/css" />
+    <script src="jsmaps/jsmaps-libs.js" type="text/javascript"></script>
+    <script src="jsmaps/jsmaps-panzoom.js"></script>
+    <script src="jsmaps/jsmaps.min.js" type="text/javascript"></script>
+    <script src="maps/world.js" type="text/javascript"></script>
     <!-- javascript -->
     <script src="js/index.js"></script>
+    <script type="text/javascript">
+
+        $(function () {
+
+            $('#world-map').JSMaps({
+                map: 'world'
+            });
+
+        });
+
+    </script>
 
 </body>
 
