updated flag icon class with new width that will accommodate new png src in database

--- a/public/index.html
+++ b/public/index.html
@@ -137,8 +137,8 @@
                     <p class="idiom-card-title">Meaning:</p>
                     <p id="idiom_card_meaning" class="idiom-card-text"></p>
                     <p class="idiom-card-title">Category:</p>
-                    <p id="idiom_card_category" class="idiom-card-textt"></p>
-                    <img id="idiom_card_language" src="" alt="language marked by flag">
+                    <p id="idiom_card_category" class="idiom-card-text"></p>
+                    <img id="idiom_card_language" class="idiom-card-flagIcon" src="" alt="language marked by flag">
                 </div>
                 <div id="link_holder" class="idiom-card-footer"></div>
             </div>
